<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Philo4 Shakespeare\'s Plays</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search terms:</string>
    <string name="search_report">Choose a search report:</string>
    <string name="search_button">submit</string>
    <string name="search_reset">reset</string>
    <string name="search_conc">Concordance</string>
    <string name="search_freq">Frequency</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string-array name="report_options">
        <item>Concordance Report</item>
        <item>Frequency by Title</item>
        <item>Frequency by Date</item>
        <item>Frequency by Speaker</item>
    </string-array>
    <string name="search_speaker">Speaker</string>
    <string name="search_title">Title</string>
    <string name="search_date">Date</string>
    <string name="no_results">Your search generated no results.</string>
    <string name="freq_search_error">Include a query term in frequency searches.</string>
    <string name="no_connection">You are not connected to the internet. Touch to close app.</string>
    <string name="server_down">The remote server is down. Try again later.</string>
    <string name="button1">Click to read stuff.</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark_this">Bookmark this page</string>
    <string name="view_bookmark">View text</string>
    <string name="delete_bookmark">Delete bookmark</string>
    <string name="app_info">Information</string>
    <string name="info1">About this app</string>
    <string name="info2">About ARTFL</string>
    <string name="info3">Quick Links</string>
    <string name="previous_page">Previous</string>
    <string name="next_page">Next Page</string>

    <plurals name="search_results_count">
        <item quantity="one">%1$d query result.</item>
        <item quantity="other">%1$d query results.</item>
    </plurals>

</resources>
