<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.eccoTCPReader.app.MainActivity" >

    <item
        android:icon="@drawable/ic_action_view_as_list"
        android:showAsAction="always"
        android:id="@+id/show_bookmarks"
        android:title="@string/bookmarks">
        <menu xmlns:android="http://schemas.android.com/apk/res/android">
            <item
                android:id="@+id/bookmark_this"
                android:title="@string/bookmark_this"/>

        </menu>
    </item>

    <item
        android:icon="@drawable/ic_action_about"
        android:showAsAction="always"
        android:id="@+id/app_info"
        android:title="@string/app_info">
        <menu xmlns:android="http://schemas.android.com/apk/res/android">
            <item
                android:id="@+id/info1"
                android:title="@string/info1"/>
            <item
                android:id="@+id/info2"
                android:title="@string/info2"/>
            <item
                android:id="@+id/info3"
                android:title="@string/info3"/>

        </menu>
    </item>
    <!--
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
        -->
</menu>
