<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/drawer_mainView"
  android:tag="tablet"
  android:background="#ffffff"
  android:orientation="horizontal"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
   <FrameLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         />

<!--
    <FrameLayout android:id="@+id/tabs"
            android:background="#ffff00"
            android:layout_gravity="left"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:layout_width="140dp"
            android:layout_height="match_parent"/>
 -->
 
     <LinearLayout 
        android:id="@+id/drawer_items"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:orientation="vertical"
        android:background="@android:color/background_light"
        android:layout_gravity="left"
        >

        <TextView
            android:id="@+id/search_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:text="@string/search"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:textColor="#000000"
            >
        </TextView>

        
        <EditText
	        android:id="@+id/search_edittext"
	        android:drawableLeft="@drawable/action_search"
	        android:background="@drawable/round_edittext"
	        android:layout_width="fill_parent"
	        android:layout_height="30dp"
	        android:layout_marginTop="5dp"
	        android:inputType="textNoSuggestions"
	        android:textColor="#000000"
	        android:textCursorDrawable="@null"
	        >
        </EditText>
        
        <TextView
            android:id="@+id/search_report"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:text="@string/search_report"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="#000000"
            >
        </TextView>

         <Spinner
             android:id="@+id/spinner"
             style="@style/spinner_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:entries="@array/report_options"
             android:textColor="#000000"
             android:prompt="@string/search_report" />

         <!--
        <RadioGroup 
			android:id="@+id/search_radios"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			
            <RadioButton
                android:id="@+id/conc_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_conc"
		        android:textSize="12sp"
            	android:textColor="#000000"                
                android:checked="true" />
            <RadioButton
                android:id="@+id/freq_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_freq"
		        android:textSize="12sp"
            	android:textColor="#000000"                
                />

        </RadioGroup>
        -->

        <!--
        <LinearLayout 
    		android:id="@+id/LinearLayout02" 
		    android:layout_height="wrap_content" 
		    android:layout_width="fill_parent"
		    android:layout_gravity="center"
			>
		    <Button 
		        android:id="@+id/search_conc" 
		        android:layout_width="95dp" 
		        android:layout_height="35dp" 
		        android:text="@string/search_conc"
		        android:textSize="12sp"
            	android:textColor="#000000"
            	android:background="?android:attr/selectableItemBackground"
            	>
		    </Button>
		    <Button 
		        android:id="@+id/search_freq" 
		        android:layout_width="95dp" 
		        android:layout_height="35dp"
		        android:text="@string/search_freq"
		        android:textSize="12sp"
            	android:textColor="#000000"
            	android:background="?android:attr/selectableItemBackground"
            	>
		    </Button>
		</LinearLayout>
       
        <ListView android:id="@+id/drawer_list"
            android:layout_gravity="left"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:dividerHeight="2dp"
            android:divider="@android:color/darker_gray">
        
        </ListView>
        
        -->
        
        <EditText
	        android:id="@+id/speaker_edittext"
	        android:background="#ffffff"
	        android:layout_width="fill_parent"
	        android:layout_height="30dp"
	        android:layout_marginTop="10dp"
	        android:textSize="18sp"
	        android:textStyle="italic|bold"
	        android:hint="@string/search_speaker"
            android:textColorHint="#000000"
	        android:inputType="textNoSuggestions"
	        android:textColor="#000000"
	        android:textCursorDrawable="@null"
	        >
        </EditText>


        <EditText
	        android:id="@+id/title_edittext"
	        android:background="#ffffff"
	        android:layout_width="fill_parent"
	        android:layout_height="30dp"
	        android:layout_marginTop="10dp"
	        android:textSize="18sp"
	        android:textStyle="italic|bold"
	        android:hint="@string/search_title"
            android:textColorHint="#000000"
	        android:inputType="textNoSuggestions"
	        android:textColor="#000000"
	        android:textCursorDrawable="@null"
	        >
        </EditText>

         <EditText
             android:id="@+id/date_edittext"
             android:background="#ffffff"
             android:layout_width="fill_parent"
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
             android:textSize="18sp"
             android:textStyle="italic|bold"
             android:hint="@string/search_date"
             android:textColorHint="#000000"
             android:inputType="textNoSuggestions"
             android:textColor="#000000"
             android:textCursorDrawable="@null"
             >
         </EditText>

        <Button 
            android:id="@+id/search_button"
            android:layout_height="40dp"
            android:layout_width="200dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/search_button"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="13sp"
            android:textColor="#000000"
            >
        </Button>
        
        <Button 
            android:id="@+id/search_reset"
            android:layout_height="40dp"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:text="@string/search_reset"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="clear"
            android:textSize="13sp"
            android:textColor="#000000"
            >
		</Button>
		  
        
    </LinearLayout>
    <!-- </FrameLayout> -->
</android.support.v4.widget.DrawerLayout>